--- a/code/packages/app/package.json
+++ b/code/packages/app/package.json
@@ -27,7 +27,10 @@
     "@web3modal/wagmi": "^3.0.2",
     "dayjs": "^1.11.10",
     "iron-session": "^6.3.1",
+    "lokijs": "^1.5.12",
     "next": "13.5.4",
+    "pino": "^8.16.0",
+    "pino-pretty": "^10.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
