contract and frontend updates

--- a/code/packages/app/package.json
+++ b/code/packages/app/package.json
@@ -23,9 +23,19 @@
     ]
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "@pushprotocol/restapi": "^1.4.28",
     "@web3modal/wagmi": "^3.0.2",
+    "@xmtp/react-sdk": "^2.2.6",
     "dayjs": "^1.11.10",
+    "ethers": "^5.7.2",
     "iron-session": "^6.3.1",
     "lokijs": "^1.5.12",
     "next": "13.5.4",
